<resources>
    <string name="app_name">hWork6–3</string>
    <string name="textViewMovieName">Vincenzo (2021)</string>
    <string name="textViewDate">May 9, 2021</string>
    <string name="buttonRentText">rent from $4.99</string>
    <string name="buttonBuyText">buy from $9.99</string>
    <string name="textViewRatingText">7.2</string>
    <string name="textViewRating2Text">242 ratings</string>
    <string name="textViewGenreText">Family</string>
    <string name="textViewPercentageText">71%</string>
    <string name="textViewSimilarText">Similar</string>
    <string name="textViewMovieIntroductionText">Vincenzo (Korean: 빈센조; RR: Binsenjo) is a 2021 South Korean television series starring Song Joong-ki as the title character alongside Jeon Yeo-been, Ok Taec-yeon, Kim Yeo-jin and Kwak Dong-yeon. It aired on tvN from February 20, 2021, to May 2, 2021, every Saturday and Sunday at 21:00 (KST); each episode was released on Netflix in South Korea and internationally after its television broadcast.</string>
</resources>