<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="365dp"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <ImageView
        android:id="@+id/imageViewMoviePosterHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewMoviePosterVertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal4"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical2"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal3" />

    <TextView
        android:id="@+id/textViewMovieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/textViewMovieName"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageViewMoviePosterVertical"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal1" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        android:text="@string/textViewDate"
        android:textColor="#4F5152"
        app:layout_constraintStart_toEndOf="@id/imageViewMoviePosterVertical"
        app:layout_constraintTop_toBottomOf="@id/textViewMovieName" />

    <Button
        android:id="@+id/buttonRent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/buttonRentText"
        app:layout_constraintEnd_toStartOf="@+id/buttonBuy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDate" />

    <Button
        android:id="@+id/buttonBuy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/buttonBuyText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonRent"
        app:layout_constraintTop_toBottomOf="@id/textViewDate" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBuy" />

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginTop="30dp"
        android:text="@string/textViewRatingText"
        android:background="@drawable/circular_text_view"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <ImageView
        android:id="@+id/textViewFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/circular_text_view"
        android:backgroundTint="@color/teal_700"
        android:src="@drawable/ic_action_name"
        app:layout_constraintEnd_toStartOf="@id/textViewPercentage"
        app:layout_constraintStart_toEndOf="@id/textViewRating"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <ImageView
        android:id="@+id/textViewPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/circular_text_view"
        android:backgroundTint="@color/teal_700"
        android:src="@mipmap/tomato"
        app:layout_constraintEnd_toStartOf="@id/textViewSimilar"
        app:layout_constraintStart_toEndOf="@id/textViewFamily"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <ImageView
        android:id="@+id/textViewSimilar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:scaleType="center"
        android:background="@drawable/circular_text_view"
        android:backgroundTint="@color/teal_700"
        android:src="@drawable/ic_baseline_content_copy_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />


</androidx.constraintlayout.widget.ConstraintLayout>